# LLM-web-searcher

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: graph.py  server.py
src/agents/: aggregation_agent.py  initial_agent.py  pages_search_agent.py
src/chains/: aggregation_chain.py  analysis_chain.py  extraction_chain.py
